--- a/index.html
+++ b/index.html
@@ -130,8 +130,15 @@
                 <span class="pred-label">🐂 牛市顶点日期</span>
                 <span class="pred-value bull-val">2025-10-06</span>
             </div>
+
+            <!-- 新增：熊市最低价 -->
             <div class="pred-row">
-                <span class="pred-label">🐻 熊市低点预测</span>
+                <span class="pred-label">📉 熊市低点 (-70%)</span>
+                <span class="pred-value bear-val">38,000 U</span>
+            </div>
+
+            <div class="pred-row">
+                <span class="pred-label">🐻 熊市低点日期</span>
                 <span class="pred-value bear-val">2026-10-05</span>
             </div>
 
