--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="jianbanlogo.png">
-    <link rel="apple-touch-icon" href="jianbanlogo.png">
+    <link rel="icon" href="https://maomao837491711.github.io/jianban/jianbanlogo.png">
+    <link rel="apple-touch-icon" href="https://maomao837491711.github.io/jianban/jianbanlogo.png">
     <title>加密货币周期监控</title>
     <style>
         :root {
