--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
             <!-- JS 自动填充 -->
         </div>
         
-        <!-- 底部文案 -->
+        <!-- 底部文案 (颜色已修改) -->
         <div class="tip">
-            <span style="color:#d29922">第一支撑</span>：基础主流机型，抄底第一支撑位。<br>
-            <span style="color:#e6edf3">黄金坑</span>：主力机型，抄底黄金坑位。<br>
-            <span style="color:#3fb950">钻石坑</span>：旗舰高效机型，抄底钻石坑位。
+            第一支撑：基础主流机型，抄底第一支撑位。<br>
+            黄金坑：主力机型，抄底黄金坑位。<br>
+            钻石坑：旗舰高效机型，抄底钻石坑位。
         </div>
     </div>
   
